--- a/app/src/main/res/layout/activity_lancamento.xml
+++ b/app/src/main/res/layout/activity_lancamento.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="35dp"
     android:orientation="vertical"
     tools:context=".LancamentoActivity">
 
@@ -14,7 +15,7 @@
         android:text="@string/cod" />
 
     <EditText
-        android:id="@+id/etCod"
+        android:id="@+id/nrCod"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:inputType="number" />
@@ -25,7 +26,7 @@
         android:text="@string/qtd" />
 
     <EditText
-        android:id="@+id/etQtd"
+        android:id="@+id/nrQtd"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:inputType="number" />
@@ -36,7 +37,7 @@
         android:text="@string/valor" />
 
     <EditText
-        android:id="@+id/etValor"
+        android:id="@+id/nrValor"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal" />
@@ -50,13 +51,17 @@
             android:id="@+id/btConfirmar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/confirmar" />
+            android:onClick="btConfirmarOnClick"
+            android:text="@string/confirmar"
+            tools:ignore="OnClick" />
 
         <Button
             android:id="@+id/btListar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/listar" />
+            android:onClick="btListarOnClick"
+            android:text="@string/listar"
+            tools:ignore="OnClick" />
 
     </LinearLayout>
 
