--- a/app/src/main/res/layout/activity_listar.xml
+++ b/app/src/main/res/layout/activity_listar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LsProdutos"
     android:entries="@array/produtos"
+    android:layout_marginTop="35dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListarActivity">
